--- a/simulation-setup.ipynb
+++ b/simulation-setup.ipynb
@@ -6,12 +6,22 @@
    "id": "148c5cfb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "import sys\n",
+    "\n",
+    "noueds = []\n",
+    "print('********************************')\n",
+    "print('AD-HOC NETWORK TOPOLOGY SIMULATOR')\n",
+    "print('********************************')\n",
+    "\n",
+    "voisinDict={}"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -26,6 +36,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "30609cf90bf0a0c99a2f7c369f598b537ae17b7fb17d17516a43238b383b4719"
+   }
   }
  },
  "nbformat": 4,
