updating readme adding more written informations

--- a/simulation-setup.ipynb
+++ b/simulation-setup.ipynb
@@ -15,7 +15,29 @@
     "print('AD-HOC NETWORK TOPOLOGY SIMULATOR')\n",
     "print('********************************')\n",
     "\n",
-    "voisinDict={}"
+    "#initianizing variables & lists & objects \n",
+    "voisinDict = {}\n",
+    "Batt={}\n",
+    "Dict={}\n",
+    "x=0\n",
+    "\n",
+    "def route(dict,x,y,routes=None):\n",
+    "    if routes is None:\n",
+    "        routes = [x]\n",
+    "    if x == y:\n",
+    "        c=0\n",
+    "        for a in range(1,len(routes),1):\n",
+    "            distxx=(Dict[routes[a-1]])[0]\n",
+    "            distyx=(Dict[routes[a-1]])[1]\n",
+    "            distxnext=(Dict[routes[a]])[0]\n",
+    "            distynext=(Dict[routes[a]])[1]\n",
+    "            dist = math.sqrt(((float(distxnext)-float(distxx))**2)+((float(distynext)-float(distyx))**2))\n",
+    "            cost=dist/float(Batt[routes[a]])\n",
+    "            c=c+cost\n",
+    "        Costs.append(c)\n",
+    "        yield routes\n",
+    "    for next in dict[x] - set(routes):\n",
+    "        yield from route(dict,next,y,routes+[next])"
    ]
   }
  ],
