--- a/simulation-setup.ipynb
+++ b/simulation-setup.ipynb
@@ -2,42 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "148c5cfb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "********************************\n",
+      "AD-HOC NETWORK TOPOLOGY SIMULATOR\n",
+      "********************************\n",
+      "[[62, 43, 69, 55, 6, 63, 74, 40, 86, 2, 25, 59, 24, 3, 88, 27, 5, 28, 17, 32, 65, 65, 32, 91, 3, 15, 22, 63], [62, 43, 69, 55, 6, 63, 74, 40, 86, 2, 25, 59, 24, 3, 88, 27, 5, 28, 17, 32, 65, 65, 32, 91, 3, 15, 22, 63], [62, 43, 69, 55, 6, 63, 74, 40, 86, 2, 25, 59, 24, 3, 88, 27, 5, 28, 17, 32, 65, 65, 32, 91, 3, 15, 22, 63], [62, 43, 69, 55, 6, 63, 74, 40, 86, 2, 25, 59, 24, 3, 88, 27, 5, 28, 17, 32, 65, 65, 32, 91, 3, 15, 22, 63], [62, 43, 69, 55, 6, 63, 74, 40, 86, 2, 25, 59, 24, 3, 88, 27, 5, 28, 17, 32, 65, 65, 32, 91, 3, 15, 22, 63], [62, 43, 69, 55, 6, 63, 74, 40, 86, 2, 25, 59, 24, 3, 88, 27, 5, 28, 17, 32, 65, 65, 32, 91, 3, 15, 22, 63], [62, 43, 69, 55, 6, 63, 74, 40, 86, 2, 25, 59, 24, 3, 88, 27, 5, 28, 17, 32, 65, 65, 32, 91, 3, 15, 22, 63]]\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "import sys\n",
+    "import random\n",
     "\n",
-    "noueds = []\n",
     "print('********************************')\n",
     "print('AD-HOC NETWORK TOPOLOGY SIMULATOR')\n",
     "print('********************************')\n",
     "\n",
-    "#initianizing variables & lists & objects \n",
-    "voisinDict = {}\n",
-    "Batt={}\n",
-    "Dict={}\n",
-    "x=0\n",
+    "#initianizing stuff\n",
+    "noueds = ['A', 'B', 'C', 'D', 'E', 'F', 'G'] #nodes list\n",
+    "voisinDict = {} #nodes neigbors dictionary\n",
+    "neighborinfo=[]\n",
+    "A= []\n",
     "\n",
-    "def route(dict,x,y,routes=None):\n",
-    "    if routes is None:\n",
-    "        routes = [x]\n",
-    "    if x == y:\n",
-    "        c=0\n",
-    "        for a in range(1,len(routes),1):\n",
-    "            distxx=(Dict[routes[a-1]])[0]\n",
-    "            distyx=(Dict[routes[a-1]])[1]\n",
-    "            distxnext=(Dict[routes[a]])[0]\n",
-    "            distynext=(Dict[routes[a]])[1]\n",
-    "            dist = math.sqrt(((float(distxnext)-float(distxx))**2)+((float(distynext)-float(distyx))**2))\n",
-    "            cost=dist/float(Batt[routes[a]])\n",
-    "            c=c+cost\n",
-    "        Costs.append(c)\n",
-    "        yield routes\n",
-    "    for next in dict[x] - set(routes):\n",
-    "        yield from route(dict,next,y,routes+[next])"
+    "#def sendDT(): #send Data\n",
+    "for i in noueds:         #for readable neighborhood information\n",
+    "        x1 = random.randint(0, 100)\n",
+    "        x2 = random.randint(0, 100)\n",
+    "        y1 = random.randint(0, 100)\n",
+    "        y2 = random.randint(0, 100)\n",
+    "        A.append(x1)\n",
+    "        A.append(x2)\n",
+    "        A.append(y1)\n",
+    "        A.append(y2)\n",
+    "        neighborinfo.append(A)\n",
+    "\n",
+    "print(neighborinfo)\n",
+    "        "
    ]
   }
  ],
